.manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 5
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoamicore
        image: index.docker.io/magohl/whoamicore
        resources:
          limits:
            #memory: "128Mi"
            #cpu: "500m"
        ports:
        - containerPort: 80
