.manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  labels:
    app: whoami-app
spec:
  type: LoadBalancer
  selector:
    app: whoami
  ports:
  - port: 3000
    targetPort: 80
