.manifests/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
  namespace: whoami
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`whoami.molnet.app`)
    services:
    - kind: Service
      name: whoami-service
      namespace: whoami
      passHostHeader: true
      port: 80
      scheme: http
  tls:
    certResolver: letsencrypt
